# cuda-cnn

./: CMakeLists.txt  README.md  main.cu
input/: cnn.csv  simple.csv
kernel/: kernel.h
output/: out_cuda.csv  simple_out_cuda.csv
src/: main.cu
src/data/: tensor.cu  tensor.cuh
src/kernel/: kernel.cu  kernel.h
test/: test_cuda.cu
tests/: test_cuda.cu
